# AsulLang-Dev

./: .gitignore  .gitmodules  ALangEngine.cpp  ALangEngine.h  ALang_Technical_Reference.md  AlangLsp.cpp  CMakeLists.txt  Console.cpp  Main.cpp  Plan.md  Quote_Normal_Output  README.md  TestRunner.cpp  Todo  errorTest.sh  funcTest.sh  runAllTests.sh
.devin/: wiki.json
Example/: OSExample.alang  STLExample.alang  array_methods_test.alang  array_select_methods.alang  binarySearchExample.alang  bitwiseExample.alang  builtins_test.alang  comment_examples.alang  computedProps.alang  containers_example.alang  crypto_enhancements_test.alang  crypto_example.alang  crypto_hash_demo.alang  csvExample.alang  dateTimeExample.alang  dateTime_extended.alang  decorator_test.alang  defaultParamsExample.alang  destructuring_test.alang  doWhileExample.alang  emptySemicolons.alang  encoding_enhancements_test.alang  encoding_test.alang  enhancedExceptionExample.alang  evalExample.alang  events_button_test.alang  events_comprehensive_test.alang  events_example.alang  events_inheritance_test.alang  example.alang  export_test.alang  ffi_test.alang  ffi_test_windows.alang  fileIOAdvancedExample.alang  fileIOClassExample.alang  fileIOExample.alang  fileImportExample.alang  fileSystem_test.alang  foreachAdvanced.alang  foreachExample.alang  (+78 more)
Example/ErrorExample/: assign_undefined.alang  await_non_promise.alang  call_non_function.alang  clamp_invalid_range.alang  connect_non_asulobject.alang  emit_no_signal_name.alang  expect_property_name.alang  file_not_found.alang  import_not_found.alang  import_private_symbol.alang  index_assignment_non_array.alang  index_non_array.alang  index_out_of_range.alang  interface_with_body.alang  invalid_assignment_target.alang  invalid_interpolation.alang  json_parse_error.alang  map_arity_error.alang  math_arity_error.alang  missing_import_math.alang  missing_interface_method.alang  missing_multiple_interface.alang  property_access_non_object.alang  readme.md  receive_non_function.alang  spread_element_not_array.alang  spread_value_not_object.alang  string_repeat_negative.alang  type_mismatch_string.alang  undefined_variable.alang  unterminated_string.alang
Example/File/: tmp_csv_example.csv
Example/Module/: export_module.alang  math_utils.alang  modA.alang  modB.alang
src/: AsulAst.h  AsulAsync.h  AsulInterpreter.cpp  AsulInterpreter.h  AsulLexer.cpp  AsulLexer.h  AsulPackages.h  AsulParser.cpp  AsulParser.h  AsulRuntime.cpp  AsulRuntime.h
src/AsulPackages/: AsulPackages.cpp  AsulPackages.h  PackageMeta.h
src/AsulPackages/Csv/: Csv.cpp  Csv.h
src/AsulPackages/Json/: Json.cpp  Json.h
src/AsulPackages/Os/: Os.cpp  Os.h
src/AsulPackages/Std/Array/: StdArray.cpp  StdArray.h
src/AsulPackages/Std/Builtin/: StdBuiltin.cpp  StdBuiltin.h
src/AsulPackages/Std/Collections/: StdCollections.cpp  StdCollections.h
src/AsulPackages/Std/Crypto/: StdCrypto.cpp  StdCrypto.h
src/AsulPackages/Std/Encoding/: StdEncoding.cpp  StdEncoding.h
src/AsulPackages/Std/Events/: StdEvents.cpp  StdEvents.h
src/AsulPackages/Std/Ffi/: StdFfi.cpp  StdFfi.h
src/AsulPackages/Std/Io/: StdIo.cpp  StdIo.h
src/AsulPackages/Std/Log/: StdLog.cpp  StdLog.h
src/AsulPackages/Std/Math/: StdMath.cpp  StdMath.h
src/AsulPackages/Std/Network/: StdNetwork.cpp  StdNetwork.h
src/AsulPackages/Std/Os/: StdOs.cpp  StdOs.h
src/AsulPackages/Std/Path/: StdPath.cpp  StdPath.h
src/AsulPackages/Std/Regex/: StdRegex.cpp  StdRegex.h
src/AsulPackages/Std/String/: StdString.cpp  StdString.h
src/AsulPackages/Std/Test/: StdTest.cpp  StdTest.h
src/AsulPackages/Std/Time/: StdTime.cpp  StdTime.h
src/AsulPackages/Std/Url/: StdUrl.cpp  StdUrl.h
src/AsulPackages/Std/Uuid/: StdUuid.cpp  StdUuid.h
src/AsulPackages/Xml/: Xml.cpp  Xml.h
src/AsulPackages/Yaml/: Yaml.cpp  Yaml.h
vscode-extension/: .gitignore  .vscodeignore  BUILD-SYSTEM.md  BUILD.md  CHANGELOG.md  CI-BUILD-FIX.md  COLOR-THEME-FIX.md  CRITICAL-FIXES.md  DEVELOPER.md  FEATURES.md  GITHUB-ACTIONS-UPDATE.md  IMPLEMENTATION-SUMMARY.md  INSTALL.md  LANGUAGE-SERVER.md  QUICKSTART.md  README.md  STANDARD-SCOPES.md  SUMMARY.md  SYNTAX-REFERENCE.md  THEME-COMPATIBILITY-FIX.md  THEME-COMPATIBILITY-REVIEW.md  THEME-REDESIGN.md  build.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/client/: package-lock.json  package.json  tsconfig.tsbuildinfo
vscode-extension/client/src/: extension.ts
vscode-extension/examples/: color-theme-demo.alang  comprehensive-test.alang  string-interpolation-demo.alang  syntax-demo.alang  variable-highlighting-demo.alang
vscode-extension/server/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
vscode-extension/server/src/: server.ts
vscode-extension/syntaxes/: alang.tmLanguage.json
vscode-extension/themes/: alang-dark-plus.json  alang-light-plus.json
